# skip-radio

./: README.md  flake.nix  justfile  prek.toml  pyproject.toml
src/skip_radio/: __init__.py  index.html  main.py
tests/: __init__.py  test_main.py
